# pymmeans

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  REPO_POLISH_CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
benchmarks/: bench_performance.py  r_benchmark.R  run_comparison.py
docs/: PERFORMANCE_REPORT.md  getting-started.md  index.md  r_parity_matrix.md  robots.txt  v0_2_roadmap.md  vs-marginaleffects.md  vs-r.md  wishlist.md
docs/api/: adapters.md  adjustments.md  aft.md  cld.md  comparisons.md  conformal.md  contrasts.md  datagrid.md  diagnostics.md  double_ml.md  emmeans.md  emtrends.md  grid_ops.md  hypotheses.md  imputation.md  joint.md  ml.md  multinom.md  multivariate.md  options.md  ordinal.md  pbktest.md  pbmodcomp.md  plotting.md  posterior.md  predictions.md  pwpm.md  qdrg.md  ref_grid.md  satterthwaite.md  sensitivity.md  slopes.md  summary.md  summary_layer.md  survey.md  transforms.md  utils.md
docs/stylesheets/: extra.css
examples/: basic_ols.py  glm_logistic.py  make_plot_artifact.py  pymmeans_showcase.html  pymmeans_showcase.ipynb
examples/jss_audit/: _build_case_study.py  _build_notebook.py  generate_case_study_reference.R  jss_case_study.html  jss_case_study.ipynb
examples/jss_audit/cs_ref/: aft_data.csv  aft_emm.csv  aft_gengamma_R.csv  aft_pairs.csv  aft_pairs_loglogistic.csv  aft_pairs_lognormal.csv  cld.csv  contrast_coding_data.csv  contrast_consec.csv  contrast_data.csv  contrast_helmert.csv  contrast_pairwise.csv  contrast_poly.csv  contrast_poly_emm.csv  contrast_sum_emm.csv  core_data.csv  core_gamma_emm_response.csv  core_logit_emm_link.csv  core_logit_emm_response.csv  core_ols_Lmatrix.csv  core_ols_emm_A.csv  core_ols_emm_A_by_B.csv  core_ols_refgrid.csv  core_poisson_emm_response.csv  core_poisson_pairs_ratio.csv  covkeep_data.csv  covkeep_emm.csv  cox_data.csv  cox_frailty_R.csv  cox_frailty_data.csv  cox_frailty_pairs.csv  cox_gamma_frailty_pairs.csv  cox_pairs.csv  cox_strata_data.csv  cox_strata_pairs.csv  dunnett_data_k3.csv  dunnett_data_k5.csv  dunnett_data_k8.csv  dunnett_k3.csv  dunnett_k5.csv  (+64 more)
overrides/: main.html
src/pymmeans/: __init__.py  adapters.py  adjustments.py  aft.py  analytic.py  cld.py  comparisons.py  conformal.py  contrasts.py  datagrid.py  diagnostics.py  double_ml.py  emmeans.py  estimability.py  grid_ops.py  hypotheses.py  imputation.py  joint.py  ml.py  multinom.py  multivariate.py  options.py  ordinal.py  pbktest.py  pbmodcomp.py  plotting.py  posterior.py  predictions.py  pwpm.py  qdrg.py  quantile.py  ref_grid.py  satterthwaite.py  sensitivity.py  slopes.py  summary.py  summary_layer.py  survey.py  transforms.py  trends.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_adjustments.py  test_aft.py  test_analytic.py  test_anova_rm_equivalence.py  test_comparisons.py  test_conformal.py  test_contrasts.py  test_datagrid.py  test_describe.py  test_diagnostics.py  test_double_ml.py  test_effect_size_edf.py  test_emmeans.py  test_emtrends_degree.py  test_estimability.py  test_estimands.py  test_formula_expressions.py  test_hypotheses.py  test_hypothesis_transform.py  test_imputation.py  test_joint.py  test_linearmodels.py  test_marginal_plots.py  test_miscoded_factor_hint.py  test_mixedlm.py  test_ml_marginal.py  test_multinom.py  test_multivariate.py  test_nuisance_weights.py  test_ordinal.py  test_param_transforms.py  test_parity_cov_cross.py  test_pbktest.py  test_pbmodcomp.py  test_plotting.py  test_posterior.py  test_posterior_hpd.py  test_predictions.py  (+20 more)
tests/r_reference/: README.md  afex_data.csv  afex_emm_A_by_B.csv  afex_joint_tests.csv  afex_pairs_A_by_B.csv  auto_noise_data.csv  auto_noise_pairs_size_by_type.csv  bias_adjust_data.csv  bias_adjust_emm.csv  cross_validation.R  exposure_data.csv  exposure_emm_response.csv  generate_cv_data.py  generate_r_reference.R  kr_emm_df.csv  kr_reference.R  kr_reference.csv  kr_reference_data.csv  kr_reference_rs.csv  lme4_ri_data.csv  lme4_ri_emm_kr.csv  lme4_ri_emm_satt.csv  lme4_ri_pairs_satt.csv  lme4_ri_vcov_kr.csv  lme4_rs_data.csv  lme4_rs_emm_satt.csv  marginal_data.csv  marginal_emm_a.csv  marginal_pairs_a.csv  multinom_emm_latent.csv  multinom_emm_prob.csv  multinom_reference.R  multivariate_data.csv  multivariate_emm.csv  multivariate_mvc.csv  multivariate_reference.R  neuralgia_data.csv  neuralgia_emm_treatment_response.csv  oats_data.csv  oats_emm_nitro.csv  (+38 more)
